--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Tradfri",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "description": "",
   "main": "./app",
@@ -20,7 +20,8 @@
   ],
   "dependencies": {
     "d3-queue": "*",    
-    "command-exists" : "*",
-    "winston" : "*"
+    "simple-node-logger" : "*",
+    "request" : "*",
+    "colors" : "*"
   }
 }
